--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.1",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.11.0",
+    "emailjs-com": "^3.2.0",
     "notistack": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
